Add option to generate paramteres
