# test-app/docs/swagger.json
@@ -1,6 +1,10 @@
 {
+    "schemes": [
+        "http"
+    ],
     "swagger": "2.0",
     "info": {
+        "title": "Example API",
         "contact": {}
     },
     "paths": {
@@ -14,33 +18,109 @@
                 }
             }
         },
-        "/group/a": {
-            "post": {
-                "summary": "TestRoute",
-                "responses": {},
-                "x-perf-check": {
-                    "errorRate": 0.05,
-                    "latency": 150
-                }
-            }
-        },
-        "/group/b": {
-            "patch": {
-                "summary": "TestRoute",
+        "/param/{x}": {
+            "get": {
+                "summary": "Example param",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "X param",
+                        "name": "x",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {},
                 "x-perf-check": {
                     "errorRate": 0.1,
-                    "latency": 150
+                    "latency": 100,
+                    "params": {
+                        "path": {
+                            "x": {
+                                "examples": [
+                                    "abc",
+                                    "def"
+                                ]
+                            }
+                        }
+                    }
                 }
             }
         },
-        "/test-route": {
+        "/pattern/{x}/{y}": {
             "get": {
-                "summary": "TestRoute",
+                "summary": "Pattern param",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "X param",
+                        "name": "x",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {},
+                "x-perf-check": {
+                    "errorRate": 0.1,
+                    "latency": 100,
+                    "params": {
+                        "path": {
+                            "x": {
+                                "pattern": "uuid"
+                            },
+                            "y": {
+                                "pattern": "string(8)"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/range/{x}": {
+            "get": {
+                "summary": "Range param",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "X param",
+                        "name": "x",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {},
+                "x-perf-check": {
+                    "errorRate": 0.1,
+                    "latency": 100,
+                    "params": {
+                        "path": {
+                            "x": {
+                                "range": {
+                                    "max": 1000,
+                                    "min": 0
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/sleep": {
+            "get": {
+                "summary": "Sleep for n seconds",
                 "responses": {},
                 "x-perf-check": {
                     "errorRate": 0.2,
-                    "latency": 250
+                    "latency": 250,
+                    "params": {
+                        "query": {
+                            "seconds": {
+                                "examples": [
+                                    1
+                                ]
+                            }
+                        }
+                    }
                 }
             }
         }
